--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ matrix:
     - rust: stable
     - rust: nightly
 script:
-  - |
-      cargo build --verbose --features "$FEATURES"
-      cargo test --verbose --features "$FEATURES"
-      [ "$BENCH" != 1 ] || cargo bench --verbose --features "$FEATURES"
-      cargo doc --verbose --features "$FEATURES"
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc
