--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ repository = "https://github.com/kolloch/actors"
 readme = "README.md"
 keywords = ["actor", "concurrency", "threads", "synchronization"]
 license = "BSD-3-Clause"
+
+[dependencies]
+threadpool = "0.1"
